added scheduling